css/style.css
/* BASIC SETTINGS */
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");

header,
main,
footer {
  width: 100%;
}

body {
  color: #393d41;
  font-size: 1.2rem;
  line-height: 1.65rem;
  font-family: "Open Sans", sans-serif;
  text-align: center;
  max-width: 100%;
}

h1,
h2,
h3,
h4 {
  color: #25a2c3;
  font-family: "Montserrat", sans-serif;
  font-weight: bold;
  line-height: 1.5;
  margin: 0 auto 5%;
}

button {
  background-color: #f04c2f;
  color: white;
  font-family: "Montserrat", sans-serif;
  font-weight: bold;
  border: none;
  border-radius: 5px;
  padding: 20px 40px;
  font-size: 1.1rem;
}

q {
  font-style: italic;
  font-weight: 300;
  font-size: 1.1em;
}

img {
  max-width: 100%;
}

h1 {
  font-size: 3rem;
  line-height: 3rem;
}

/* HEADER */

header {
  background-color: black;
  min-height: 70px;
}

#header-img-container {
  width: 35%;
  margin: 0 auto;
}

header img {
  margin-top: 20%;
  margin-bottom: 20%;
}

/* MAIN */

main {
  text-align: center;
}

.main-block {
  padding: 15% 6% 8%;
}

main p {
  font-size: 1.5rem;
  line-height: 2.5rem;
  margin-bottom: 10%;
}

main h3 {
  font-size: 1.5rem;
}

#first-block {
  background-image: url(../images/banner.jpg);
  background-position: center;
  background-size: cover;
  min-height: 35vh;
}

#first-block button:hover {
  cursor: pointer;
}

#circular-img {
  border-radius: 50%;
  margin-bottom: 10%;
}

#third-block {
  background-color: #e22d0e;
  color: white;
}

#third-block h2 {
  color: white;
  font-size: 2rem;
  margin-bottom: 10%;
}

#author {
  margin-top: 10%;
  margin-bottom: 0;
}

#author-position {
  font-size: 1.1rem;
  margin-bottom: 0;
}

.sub-block {
  border: 1px solid #dee1e3;
  text-align: center;
  margin-bottom: 10%;
}

.sub-block h4 {
  font-size: 1.1em;
  margin-top: 5%;
}

.sub-block p {
  font-size: 1.25rem;
  padding: 0 5%;
}
/* FOOTER */
footer {
  color: #c8e7f0;
  background-color: #25a2c3;
  opacity: 0.9;
  padding: 10% 0;
}

footer h2 {
  font-size: 2.5rem;
  font-weight: 600;
  color: white;
}

footer a {
  color: #c8e7f0;
  font-size: 1.25rem;
}

footer p {
  color: #c8e7f0;
  line-height: 2.2rem;
  font-size: 1.25rem;
}

footer i {
  color: white;
}

#copyright {
  color: #c8e7f0;
  padding-top: 5%;
  border-top: 1px solid #c8e7f0;
  width: fit-content;
  margin: 5% auto;
}

#copyright p,
#copyright a {
  font-size: 1.1rem;
}

/* MEDIA QUERIES */

@media (min-width: 1024px) {
  header,
  main,
  footer {
    margin: 0 auto;
  }

  header {
    text-align: start;
  }

  #header-img-container {
    width: 15%;
    margin-left: 5%;
  }

  #first-block {
    padding-top: 10%;
    padding-left: 20%;
    padding-right: 20%;
    background-position: 0% 0%;
  }

  #first-block h1 {
    font-size: 2.5rem;
  }

  #first-block p {
    font-size: 1.2rem;
    margin-bottom: 5%;
  }

  /* Questo sotto è stato un delirio */

  #second-block img {
    float: left;
    position: relative;
    bottom: 15em;
    width: 40%;
    vertical-align: middle;
    margin-right: 5%;
    margin-bottom: 0;
  }

  #second-block {
    text-align: left;
    padding: 12% 15% 10%;
  }

  #second-block p {
    font-size: 1.1rem;
    margin-bottom: 3%;
  }

  #second-block h3 {
    margin-bottom: 2%;
    font-size: 1.5rem;
  }

  #first-text {
    position: relative;
    left: 45%;
    max-width: 53%;
  }

  #second-text h3 {
    margin-bottom: 1%;
  }

  #second-text p {
    margin-bottom: 1%;
  }

  #third-block {
    text-align: center;
  }

  #fourth-block {
    padding-top: 10%;
  }

  .sub-block {
    min-width: fit-content;
    width: 24%;
    display: inline-block;
    margin: 0 1%;
    height: 280px;
    contain: strict;
    padding-bottom: 5%;
  }

  /* Anche questo sotto è stato un delirio... */
  .sub-block img {
    width: -webkit-fill-available;
    min-height: 220px;
  }

  .sub-block p {
    font-size: 0.9rem;
    line-height: 1.1em;
    padding-bottom: 5%;
    padding-left: 1%;
    padding-right: 1%;
  }

  .sub-block h4 {
    font-size: 1rem;
  }
}

